Game update with interactive objects

--- a/ecoquest-game/index.html
+++ b/ecoquest-game/index.html
@@ -6,8 +6,11 @@
 </style>
 
 <canvas></canvas>
+
 <script src="js/collisions.js"></script>
+<script src="js/objects.js"></script>
 <script src="js/class.js"></script>
+<script src="js/interactableObjects.js"></script>
 <script src="index.js"></script>
 
 
