--- a/carbon-offset-extension/popup.html
+++ b/carbon-offset-extension/popup.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EcoQuest Carbon Offset</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap');
+    
     body {
-      font-family: 'Segoe UI', Arial, sans-serif;
+      font-family: 'Inter', 'Poppins', system-ui, -apple-system, sans-serif;
+      font-feature-settings: 'liga' 1, 'calt' 1;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
       margin: 0;
       padding: 0;
       width: 260px;
@@ -26,7 +31,9 @@
     .header h3 {
       margin: 0;
       font-size: 20px;
-      font-weight: bold;
+      font-family: 'Poppins', 'Inter', system-ui, sans-serif;
+      font-weight: 600;
+      letter-spacing: -0.025em;
       color: #065f46; /* green-800 */
     }
 
@@ -60,7 +67,9 @@
       padding: 10px;
       width: 100%;
       margin-top: 10px;
+      font-family: 'Inter', 'Poppins', system-ui, sans-serif;
       font-weight: 600;
+      font-size: 14px;
       border-radius: 6px;
       cursor: pointer;
       transition: background 0.2s ease;
